Add auth-method and generate jwt-token after it

--- a/Notion.GrpcService/appsettings.json
+++ b/Notion.GrpcService/appsettings.json
@@ -17,5 +17,8 @@
   "Redis": {
     "Config": "localhost:6379",
     "Instance": "RedisInstance"
+  },
+  "Jwt": {
+    "Key": "SuperSecretMyKey777SuperSecretMyKey777"
   }
 }
